--- a/changes.txt
+++ b/changes.txt
@@ -25,8 +25,10 @@ HOVE 0.2
 	* Added Image.getData()
 	* Added Image.refresh()
 	* Added Joystick.getName()
+	* Added Joystick.getGUID()
 	* Added particular support for love.window.setMode()
 	* Added support for SpriteBatchUsage
+	* Added basic joystick support for HTML5
 	
 	* SpriteBatch works now
 	* love.graphics.draw() now uses batching
